--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav navbar-center">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Find Your School<span class="sr-only">(current)</span></a>
+            <li class="nav-item ">
+              <a class="nav-link" href="#">Find Your School</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
@@ -55,6 +55,14 @@
             </div>
     </div>
 </section>
+
+<section>
+    <div class="aboutUs>
+
+    </div>  
+</section>
+
+
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/index.js"></script>
