--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 </section>
 
 
+<footer>
+    <h3>Copyright 2019 Bubl</h3>
+</footer>
+
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/index.js"></script>
