--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="#about">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Learn More</a>
+                <a class="nav-link" href="#middle">Learn More</a>
               </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Login</a>
@@ -52,7 +52,7 @@
   </section>
 
   <section>
-  <div class ="middle">  
+  <div class ="middle" id="middle">  
     <div class="middle1">
       <img class = "followers" img src="img/undraw_post_online_dkuk.png" alt="image of followers">
       <h2>Lorem ipsum 1</h2>
@@ -78,7 +78,7 @@
 
 <section>
     <div class="aboutUs" id="about">
-        <h2>About Us</h2>
+        <h2>About Us (Separate page)</h2>
         <p>(Separate page)  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet ligula eu enim tincidunt ullamcorper. Sed lorem orci, auctor at ligula quis, pharetra porta magna. Aenean ac magna iaculis, interdum urna et, pretium tellus. Donec ultrices semper ligula, ac eleifend ex aliquet vitae. Sed vulputate, nisi eu tincidunt fermentum, mi tortor facilisis tortor, et efficitur magna sapien sed ante. Aliquam lectus sapien, laoreet ut consectetur vel, mollis eget tellus. Etiam velit velit, molestie vel convallis quis, commodo eget enim. Fusce ultricies laoreet arcu. Etiam suscipit justo tempor suscipit ultrices. Nulla id porttitor mi.</p>
         
     
