finishing touches. ready for JS implements

--- a/aboutus.html
+++ b/aboutus.html
@@ -38,44 +38,43 @@
     </nav>
 
 <section>
-     <div class="container">
+     <div class="container container2">
         <div class="theh2">
         <h2>About Us</h2>
         </div>
 
         <div class="aboutUs" id="about">
             <div class = "profile1 prop">
-                <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">   
-                
+                <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">         
                 <h4>Ben Rogers</h4>
                 <p>Web UI Developer</p>
-                <i class="fab fa-github"></i>
+                <a href="https://github.com/thisbenrogers" i class="fab fa-github"></i></a>
             </div>
             <div class="profile2 prop">
                 <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">   
                  <h4>Leilani Schimmelfennig</h4>
                 <p>Web UI Developer</p>
-                <i class="fab fa-github"></i>
+                <a href="https://github.com/lschimm" i class="fab fa-github"></i></a>
             </div>
             <div class="profile3 prop">
                 <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">   
                 <h4>Vic Nguyen</h4>
                 <p>Front End Architect</p>
-                <i class="fab fa-github"></i>
+                <a href="https://github.com/victor082" i class="fab fa-github"></i></a>
             </div>
             <div class="profile4 prop">  
                 <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">   
                 <h4>Guillaume Savy</h4>
                 <p>Back End Architect</p>
-                <i class="fab fa-github"></i>
+                <a href="https://github.com/guillsav" i class="fab fa-github"></i></a>
             </div>
             <div class="profile5 prop">
                 <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">   
                 <h4>Jeremiah Tenbrink</h4>
                 <p>Team Lead</p>
-                <i class="fab fa-github"google.com></i>
+                <a href="https://github.com/jeremiahtenbrink" i class="fab fa-github"></i></a>
             </div>
-        </div>
+    </div>
     </section>
 
 
