--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
                     your<br>
                     bubl</h1>
                     <p></p>
-                    <button>Sign Up</button><br>
-                    <button>Log In</button
+                    <button>Sign Up</button>
+<div class="bubble x3"></div>
+<div class="bubble x2"></div>
+
+<div class="bubble x4"></div>
             </div>
     </div>
   </section>
@@ -54,21 +57,20 @@
   <section>
   <div class ="middle" id="middle">  
     <div class="middle1">
-      <img class = "followers" img src="img/undraw_post_online_dkuk.png" alt="image of followers">
-      <h2>Lorem Ipsum Blank</h2>
-      <p>With the rise of social media, many parents worry their children may have access to worrisome content. </p>
+      <img class = "followers" img src="img/undraw_children_4rtb.png" alt="image of followers">
+      <h2>About Bubl</h2>
+      <p>Making friends can be difficult. Bubl seeks to help elementary children transitioning to middle school. With the help of Bubl, social bubbles can be grow before classes even begin.</p>
     </div>
-    
     <div class="middle1">
        <img class = "followers" img src="img/undraw_true_friends_c94g (2).png" alt="image of followers">
-       <h2>Easy-to-Use Layout</h2>
-       <p>With the rise of social media, many parents worry their children may have access to worrisome content.</p>
+       <h2>Kid Friendly Layout</h2>
+       <p>With our simple layout, kids will be able to navigate the app with ease. With less time spent figuring out the layout, children can quickly begin to make connections.</p>
     </div>
 
     <div class="middle1">
-        <img class = "followers" img src="img/undraw_taking_selfie_lbo7.png" alt="image of followers">
+        <img class = "followers" img src="img/undraw_post_online_dkuk.png" alt="image of followers">
         <h2>Parental Controls</h2>
-        <p>With the rise of social media, many parents worry their children may have access to worrisome content.</p>
+        <p>In the age of rising technology and limitless social emdia, many parents worry their children may have access to worrisome content. Find out more about our parental controls and safety features. </p>
      </div>
   </div>
 
