more finishing touches

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <button>Sign Up</button>
 <div class="bubble x3"></div>
 <div class="bubble x2"></div>
-
+<div class="bubble x5"></div>
 <div class="bubble x4"></div>
             </div>
     </div>
