adding sign up page too

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     your<br>
                     bubl</h1>
                     <p></p>
-                    <button>Sign Up</button>
+                    <a href="https://nervous-mirzakhani-681336.netlify.com/signup"><button>Sign Up</button></a>
 <div class="bubble x3"></div>
 <div class="bubble x2"></div>
 <div class="bubble x5"></div>
