before i mess everything up adding objects

--- a/aboutus.html
+++ b/aboutus.html
@@ -16,16 +16,13 @@
         <a class="navbar-brand" href="./index.html">Bubl</a>
         <ul class="navbar-nav navbar-center">
             <li class="nav-item ">
-            <a class="nav-link" href="#">Find Your School</a>
+            <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="./aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#middle">Learn More</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="https://nervous-mirzakhani-681336.netlify.com/login">Login</a>
             </li>
             </div>
             </li>
@@ -37,7 +34,6 @@
         <div class="theh2">
         <h2>About Us</h2>
         </div>
-
         <div class="aboutUs" id="about">
             <div class = "profile1 prop">
                 <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">         
@@ -75,9 +71,11 @@
 
     <footer>
         <div class="container">
-            <h3>Copyright 2019 Bubl</h3>
+            <h3></h3>
         </div>
     </footer>
+
+
 </div>
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
