--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     your<br>
                     bubl</h1>
                     <p></p>
-                    <a href="https://nervous-mirzakhani-681336.netlify.com/signup"><button>Sign Up</button></a>
+                    <a href="https://nervous-mirzakhani-681336.netlify.com/signup"><button></button></a>
 <div class="bubble x3"></div>
 <div class="bubble x2"></div>
 <div class="bubble x5"></div>
@@ -56,7 +56,7 @@
   <div class ="middle" id="middle">  
     <div class="middle1">
       <img class = "followers" img src="img/undraw_children_4rtb.png" alt="image of followers">
-      <h2>About<br>Bubl</h2>
+      <h2></h2>
       <p>Making friends can be difficult. Throw in a new school with a new enviroment and it can seem even harder. Bubl seeks to assist elementary children transitioning to middle school. With Bubl, social bubbles can begin to grow before classes even begin.</p>
     </div>
     <div class="middle1">
@@ -82,7 +82,7 @@
 
 <footer>
     <div class="container">
-        <h3>Copyright 2019 Bubl</h3>
+        <h3></h3>
     </div>
 </footer>
 </div>
