finished pair programming

--- a/aboutus.html
+++ b/aboutus.html
@@ -71,7 +71,8 @@
 
     <footer>
         <div class="container">
-            <h3></h3>
+            <h3>©2019 BUBL, INC. ALL RIGHTS RESERVED.</h3>
+            <h3>All trademarks referenced herein are the properties of their respective owners.</h3>
         </div>
     </footer>
 
