--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <footer>
     <div class="container">
         <h3></h3>
+        <h3>All trademarks referenced herein are the properties of their respective owners.</h3>
     </div>
 </footer>
 </div>
