--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light parallax">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Bubl</a>
-        
-        </button>
         
           <ul class="navbar-nav navbar-center">
             <li class="nav-item ">
@@ -40,7 +38,8 @@
                 <h1>expand<br>
                     your<br>
                     bubl</h1>
-                    <a href="https://nervous-mirzakhani-681336.netlify.com/signup"><button></button></a>
+                    <a href="https://nervous-mirzakhani-681336.netlify.com/signup">
+                    <button></button></a>
                     <div class="bubble x3"></div>
                     <div class="bubble x2"></div>
                     <div class="bubble x5"></div>
