more event listeners added with forEach

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light parallax">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="./index.html">Bubl</a>
         <ul class="navbar-nav navbar-center">
             <li class="nav-item ">
