--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Bubl</a>
-        
           <ul class="navbar-nav navbar-center">
             <li class="nav-item ">
               <a class="nav-link" href="#">Find Your School</a>
@@ -39,7 +38,7 @@
                     your<br>
                     bubl</h1>
                     <a href="https://nervous-mirzakhani-681336.netlify.com/signup">
-                    <button></button></a>
+                    <div class="btn"><button></button></a></div>
                     <div class="bubble x3"></div>
                     <div class="bubble x2"></div>
                     <div class="bubble x5"></div>
