finishing touches made. perhaps more later?

--- a/aboutus.html
+++ b/aboutus.html
@@ -36,31 +36,31 @@
         </div>
         <div class="aboutUs" id="about">
             <div class = "profile1 prop">
-                <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">         
+                <img class = "profilepic" img src="img/iconfinder_husky_dog_4591888.png" alt="image of profile pic">         
                 <h4>Ben Rogers</h4>
                 <p>Web UI Developer</p>
                 <a href="https://github.com/thisbenrogers" i class="fab fa-github"></i></a>
             </div>
             <div class="profile2 prop">
-                <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">   
+                <img class = "profilepic" img src="img/iconfinder_fox_4591894.png" alt="image of profile pic">   
                  <h4>Leilani Schimmelfennig</h4>
                 <p>Web UI Developer</p>
                 <a href="https://github.com/lschimm" i class="fab fa-github"></i></a>
             </div>
             <div class="profile3 prop">
-                <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">   
+                <img class = "profilepic" img src="img/iconfinder_rabbit_4591882.png" alt="image of profile pic">   
                 <h4>Vic Nguyen</h4>
                 <p>Front End Architect</p>
                 <a href="https://github.com/victor082" i class="fab fa-github"></i></a>
             </div>
             <div class="profile4 prop">  
-                <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">   
+                <img class = "profilepic" img src="img/iconfinder_bear_4591876.png" alt="image of profile pic">   
                 <h4>Guillaume Savy</h4>
                 <p>Back End Architect</p>
                 <a href="https://github.com/guillsav" i class="fab fa-github"></i></a>
             </div>
             <div class="profile5 prop">
-                <img class = "profilepic" img src="img/undraw_profile_pic_ic5t.png" alt="image of profile pic">   
+                <img class = "profilepic" img src="img/iconfinder_Lion_4591886.png" alt="image of profile pic">   
                 <h4>Jeremiah Tenbrink</h4>
                 <p>Team Lead</p>
                 <a href="https://github.com/jeremiahtenbrink" i class="fab fa-github"></i></a>
@@ -72,6 +72,7 @@
     <footer>
         <div class="container">
             <h3>©2019 BUBL, INC. ALL RIGHTS RESERVED.</h3>
+            <h3>Icons by Kerismaker
             <h3>All trademarks referenced herein are the properties of their respective owners.</h3>
         </div>
     </footer>
