--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,8 @@
             </li>
         </ul>
     </nav>
-<section>
+
+<!-- <section>
         <div class="school container container2">
                 <h1>School Name</h1>
                 <h2>Bubl:</h2>
@@ -54,7 +55,7 @@
     </div>
 <section>
 
-</section>
+</section> -->
 
 <footer>
         <div class="container">
