fixing js errors

--- a/aboutus.html
+++ b/aboutus.html
@@ -42,7 +42,7 @@
                 <a href="https://github.com/thisbenrogers" i class="fab fa-github"></i></a>
             </div>
             <div class="profile2 prop">
-                <img class = "profilepic" img src="img/iconfinder_fox_4591894.png" alt="image of profile pic">   
+                <img class = "profilepic" img src="img/iconfinder_panda_4591884.png" alt="image of profile pic">   
                  <h4>Leilani Schimmelfennig</h4>
                 <p>Web UI Developer</p>
                 <a href="https://github.com/lschimm" i class="fab fa-github"></i></a>
@@ -79,6 +79,7 @@
 
 
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/index.js"></script>
