--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="navbar-brand" href="#">Bubl</a>
           <ul class="navbar-nav navbar-center">
             <li class="nav-item ">
-              <a class="nav-link" href="#">Find Your School</a>
+              <a class="nav-link" href="https://angry-villani-175823.netlify.com/index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#middle">Learn More</a>
@@ -56,12 +56,12 @@
       <p></p>
     </div>
     <div class="middle1">
-       <img class = "followers" img src="img/undraw_true_friends_c94g (2).png" alt="image of followers">
+       <img class = "followers" img src="img/undraw_true_friends_c94g (1).png" alt="image of followers">
        <h2></h2>
        <p></p>
     </div>
     <div class="middle1">
-        <img class = "followers" img src="img/undraw_accept_request_vdsd.png" alt="image of followers">
+        <img class = "followers" img src="img/undraw_personal_settings_kihd.png" alt="image of followers">
         <h2></h2>
         <p></p>
      </div>
@@ -81,6 +81,7 @@
     </div>
 </footer>
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="js/bootstrap.bundle.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/index.js"></script>
