--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Bubl</a>
+        <a class="navbar-brand" href="./index.html">Bubl</a>
           <ul class="navbar-nav navbar-center">
             <li class="nav-item ">
-              <a class="nav-link" href="https://angry-villani-175823.netlify.com/index.html">Home</a>
+              <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#middle">Learn More</a>
